<resources>
	<string name="google_api_key">AIzaSyBnLuF_wKKtSiLBF6Mal6RUI9qWTvDbbno</string>
    <string name="app_name">Unitel</string>
    <string name="err_connect">Connection error!</string>
    <string name="logout">Log out</string>
    <string name="notification">Notifications</string>
    <string name="my_profile">Your information</string>
    <string name="account_detail">Account Details</string>
    <string name="about_us">About Unitel</string>
    <string name="tariff_info">Tariff information</string>
    <string name="vietel_showroom">Showroom</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="provine">Provine</string>
    <string name="showroom">Showroom</string>
    <string name="view_detail">View Details</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="change_language">Change Language</string>
    <string name="mobile_number">Mobile number</string>
    <string name="tariff_plan">Your tariff plan</string>
    <string name="tariff_details">Tariff details</string>
    <string name="change_tariff">Change tariff</string>
    <string name="basic_account">Basic account</string>
    <string name="balance_expire">Balance expire</string>
    <string name="balance_value">Balance value</string>
    <string name="up_pay">Recharge now</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="number">Number</string>
    <string name="user_using">User using</string>
    <string name="account_type">Account type</string>
    <string name="start_datetime">Start datetime</string>
    <string name="address">Address</string>
    <string name="birthdate">Birthday</string>
    <string name="pin">Pin</string>
    <string name="password">Password</string>
    <string name="re_password">Retype Password</string>
    <string name="data_register">Register</string>
    <string name="deactive">Deactive</string>
    <string name="remove">Remove</string>
    <string name="confirm_register_data">Do you want to register this data package?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_register">Not register</string>
    <string name="active">Register</string>
    <string name="buy_more">Buy more</string>
    <string name="other_account">Other account information</string>
    <string name="account_info">Account info</string>
    <string name="other_account_info">Other account info</string>
    <string name="confirm_up_pay">Which number do you want to recharge?</string>
    <string name="you">You</string>
    <string name="anyone">Any one</string>
    <string name="enter_number">Enter the number</string>
    <string name="enter_pin">Enter the charge pin</string>
    <string name="data_3g_account">Mobile Internet</string>
    <string name="data_4g_account">Data 4G account</string>
    <string name="other_3g_account">Other account</string>
    <string name="buy_data">Buy data</string>
    <string name="map">Map</string>
    <string name="confirm_logout">Do you want to logout?</string>
    <string name="offer">Offer</string>
    <string name="offer_info">Offer info</string>
    <string name="service">Service</string>
    <string name="info">Info</string>
    <string name="pack_4g">4G pack</string>
    <string name="buy">Buy</string>
    <string name="charge_debit">Detail Payment in month</string>
    <string name="debit_start">Your debt not yet make payment</string>
    <string name="payment">Already Payment</string>
    <string name="credit">Credit</string>
    <string name="debit_history">Debit history</string>
    <string name="pay_199">Make payment</string>
    <string name="tariff_detail">Tariff Details</string>
    <string name="promotion">Special Offer</string>
    <string name="vas">Value added service</string>
    <string name="tranfer">Tranfer</string>
    <string name="english">English</string>
    <string name="vietnam">Việt Nam</string>
    <string name="lao">ພາສາລາວ</string>
    <string name="postpaid">Postpaid Service</string>
    <string name="prepaid">Prepaid Service</string>
    <string name="remember">Remember</string>
    <string name="change_pass">Change password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="change">Change</string>
    <string name="hint_number">Phone number: 209XXX</string>
    <string name="number_exist">Phone number has been registed</string>
    <string name="name">Name</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="balance_acount">Balance Account</string>
    <string name="detail_using">Detail Using Services</string>
    <string name="account_name">Account name</string>
	<string name="data_not_available">3G is not available</string>
	<string name="profile">Profile</string>
	<string name="more">More</string>
    <!-- Message -->
    <string name="message_empty_number">Please Enter mobile number</string>
    <string name="message_empty_pin">Please Enter Pin Code</string>
    <string name="message_empty_password">Please Enter your password</string>
    <string name="message_empty_new_password">Please Enter new password</string>
    <string name="message_empty_old_password">Please Enter old password</string>
    
    <string name="message_checking">checking...</string>
    <string name="message_success">Sucessfully</string>
    <string name="message_fail">Fail!</string>
    <string name="message_loading">loading...</string>

    <!-- Message top up pay by card -->
    <string name="up_pay_m6">Unhandled error, please contact administrator</string>
    <string name="up_pay_m3">Invalid subsriber format</string>
    <string name="up_pay_m5">Pin not found</string>
    <string name="up_pay_2">Card pin is not valid</string>
    <string name="up_pay_5">Not found  subscriber info</string>
    <string name="up_pay_7">Over  permitted charge times</string>
    <string name="up_pay_6">Payment error</string>

    <!-- List acc name -->
    <string name="acc2000">Basic account</string>
    <string name="acc2001">Promotion account</string>
    <string name="acc2004">Basic account when refill card via 198 </string>
    <string name="acc4200">Free sms onnet</string>
    <string name="acc4046">Free minute call onnet</string>
    <string name="acc4500">Free GPRS sub account </string>
    <string name="acc4561">Free GPRS Account2</string>
    <string name="acc4560">Free GPRS sub account 1</string>
    <string name="acc2504">Basic account</string>
    <string name="acc2500">On-net call, SMS and internet promotion</string>

    <!-- List Balance -->
    <string name="bal1">Basic Balance</string>
    <string name="bal10">Prepaid Promotion Balance 1</string>
    <string name="bal14">Prepaid Promotion Balance 2</string>
    <string name="bal15">Prepaid International Free Minute</string>
    <string name="bal8">Prepaid Internal Free Minute</string>
    <string name="bal17">Prepaid External Free Minute</string>
    <string name="bal13">Promotion Free Data 1</string>
    <string name="bal19">Promotion Free Data 2</string>
    <string name="bal12">Internal Free SMS</string>
    <string name="bal16">International Free SMS</string>
    <string name="bal26">Promotion Free Data 3</string>
    <string name="bal28">Promotion Roaming Free Data</string>

    <!-- Message error -->
    <string name="err0">success</string>
    <string name="err1000">User name is invalid</string>
    <string name="err2000">Webservice code is invalid</string>
    <string name="err4000">The request\'s message\'s format is not accurate</string>
    <string name="err1001">User name does not exits</string>
    <string name="err6000">Because our system is overloading, please wait another time to sent requests</string>
    <string name="err7000">The connection to DB has some problems. The gateway can not handle the request at this time</string>
    <string name="err6001">You don\'t have the right to access the web service</string>
    <string name="err6002">Your right about calling the web service is expired, please contact the administrator</string>
    <string name="err6003">Login failed. Please check user name, password and your IP Address and contact the administrator</string>
    <string name="err6004">Login failed.UserName is invalid.</string>
    <string name="err7001">Database error</string>
    <string name="err2005">Webservice error</string>
    <string name="err6005">Error when load response to DOM</string>
    <string name="err8000">The ip is incorrect</string>
    <string name="err9001">Exception</string>
    <string name="err9002">Error when prepare soap input</string>
    <string name="err3000">Client does not found in databse or inactive</string>
    <string name="err2001">Webservice does not found in databse or inactive</string>
    <string name="err4001">Requested web service does not exits</string>
    <string name="err5000">Too many requests. Please wait until your other request finish</string>
    <string name="err1002">User name is inactive, please contact the administrator</string>
    <string name="err2002">The web service you requested is inactive, please contact the administrator</string>
    <string name="err2003">The connection to the web service has problems. Please contact the administrator</string>
    <string name="err2004">Could not connect to the business web service</string>
    <string name="err9000">Unhandled error occur</string>
    <string name="err8001">The password is incorrect</string>
    <string name="err8002">The userName $username$ is incorrect!</string>
    <string name="err6006">Error occur when decrypt user and password</string>
    <string name="err_m1">Unknow error</string>
    <string name="error">Error</string>

</resources>