<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:padding="@dimen/default_padding" >

        <TextView
            android:id="@+id/tv_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/basic_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_topic"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_black"
        android:padding="1dp" >

        <ProgressBar
            android:id="@+id/pb_basic_account"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/layout_basic_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" >

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding" >

                <TextView
                    android:id="@+id/tv_sub_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/basic_account"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/header_topic" />

                <TextView
                    android:id="@+id/tv_sub_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sub_des"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/default_padding"
                    android:text="TextView"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/highlight_value"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl1" >

                <LinearLayout
                    android:id="@+id/layout_deactive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding"
                    android:visibility="gone"
                    android:weightSum="2" >

                    <RelativeLayout
                        android:id="@+id/btn_deactive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/main_color"
                        android:paddingBottom="@dimen/default_padding"
                        android:paddingTop="@dimen/default_padding" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:singleLine="true"
                            android:text="@string/remove"
                            android:textColor="@android:color/white" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_buy_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1"
                        android:background="@color/main_color"
                        android:paddingBottom="@dimen/default_padding"
                        android:paddingTop="@dimen/default_padding" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:singleLine="true"
                            android:text="@string/buy_more"
                            android:textColor="@android:color/white" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding"
                    android:visibility="gone" >

                    <RelativeLayout
                        android:id="@+id/btn_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@color/main_color"
                        android:paddingBottom="@dimen/default_padding"
                        android:paddingTop="@dimen/default_padding" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:singleLine="true"
                            android:text="@string/register"
                            android:textColor="@android:color/white" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>