<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_header">

                <RelativeLayout
                    android:id="@+id/layout_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="@dimen/header_icon"
                        android:layout_height="@dimen/header_icon"
                        android:src="@drawable/turn_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/ivBack"
                        android:text="BACK"
                        android:textColor="@color/info_data"
                        android:textSize="16dp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/top_logo_height"
                    android:adjustViewBounds="true"
                    android:src="@drawable/top_logo" />

                <ImageView
                    android:id="@+id/iv_noti"
                    android:layout_width="@dimen/top_logo_height"
                    android:layout_height="@dimen/top_logo_height"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/noti_bell" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"></RelativeLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_header"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:weightSum="5">

                <RelativeLayout
                    android:id="@+id/tab_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/bot_menu_padding">

                    <ImageView
                        android:id="@+id/iv_menu_profile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bot_menu_ico_height"
                        android:src="@drawable/menu_profile" />

                    <TextView
                        android:id="@+id/tv_menu_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_menu_profile"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/bot_menu_padding"
                        android:singleLine="true"
                        android:text="@string/profile"
                        android:textColor="@color/new_orange"
                        android:textSize="@dimen/bot_menu_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_internet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/bot_menu_padding">

                    <ImageView
                        android:id="@+id/iv_menu_internet"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bot_menu_ico_height"
                        android:src="@drawable/menu_mobile_internet" />

                    <TextView
                        android:id="@+id/tv_menu_internet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_menu_internet"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/bot_menu_padding"
                        android:singleLine="true"
                        android:text="@string/data_3g_account"
                        android:textColor="@color/new_orange"
                        android:textSize="@dimen/bot_menu_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_offer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/bot_menu_padding">

                    <ImageView
                        android:id="@+id/iv_menu_offer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bot_menu_ico_height"
                        android:src="@drawable/menu_offer" />

                    <TextView
                        android:id="@+id/tv_menu_offer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_menu_offer"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/bot_menu_padding"
                        android:singleLine="true"
                        android:text="@string/offer"
                        android:textColor="@color/new_orange"
                        android:textSize="@dimen/bot_menu_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_services"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/bot_menu_padding">

                    <ImageView
                        android:id="@+id/iv_menu_service"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bot_menu_ico_height"
                        android:src="@drawable/menu_services" />

                    <TextView
                        android:id="@+id/tv_menu_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_menu_service"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/bot_menu_padding"
                        android:singleLine="true"
                        android:text="@string/service"
                        android:textColor="@color/new_orange"
                        android:textSize="@dimen/bot_menu_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab_more"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/bot_menu_padding">

                    <ImageView
                        android:id="@+id/iv_menu_more"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bot_menu_ico_height"
                        android:src="@drawable/menu_more" />

                    <TextView
                        android:id="@+id/tv_menu_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_menu_more"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/bot_menu_padding"
                        android:singleLine="true"
                        android:text="@string/more"
                        android:textColor="@color/new_orange"
                        android:textSize="@dimen/bot_menu_text" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
</TabHost>